--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoGallery">
-        <service
-            android:name=".service.PollService"
-            android:exported="false"></service>
+        <service android:name=".service.PollJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
         <activity android:name=".view.activity.PhotoGalleryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
