--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
     def retrofit_version = '2.9.0'
+    def work_version = '2.4.0'
 
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -49,6 +50,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.work:work-runtime:$work_version"
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
