--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,9 @@ dependencies {
     implementation "androidx.work:work-runtime:$work_version"
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'org.greenrobot:eventbus:3.2.0'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.1.6"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 }
