--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.maktab.photogallery">
 
-    <permission android:name="org.maktab.photogallery.PRIVATE"
-        android:protectionLevel="signature" />
-
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="org.maktab.photogallery.PRIVATE" />
-
 
     <application
         android:name=".PhotoGalleryApplication"
@@ -20,15 +20,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PhotoGallery">
-        <receiver
-            android:name=".receiver.NotificationReceiver"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter android:priority="-999">
-                <action android:name="org.maktab.photogallery.ACTION.PRIVATE_NOTIFICATION" />
-            </intent-filter>
-        </receiver>
 
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity android:name=".view.activity.LocatrActivity" />
         <activity
             android:name=".view.activity.PhotoPageActivity"
             android:configChanges="orientation|screenSize" />
